--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Bharat Sinha",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "workbox-sw": "^2.1.0"
   },
   "devDependencies": {
     "morgan": "^1.8.2",
